# Drf_jwt

./: main.py  pyproject.toml
src/drf_jwt/: db.sqlite3
src/drf_jwt/authentication/: serializers.py  urls.py  views.py
src/drf_jwt/drf_jwt/: settings.py  urls.py
